--- a/front/package.json
+++ b/front/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "json-server": "^1.0.0-beta.3"
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "json-server": "^1.0.0-beta.3",
+    "nodemon": "^3.1.10"
   }
 }
